endpoint for saving car parameters
